some work on responsivity

--- a/index.css
+++ b/index.css
@@ -56,12 +56,14 @@ h3 {
     gap: 60px;
     z-index: 255;
 }
+.menuvojta {
+    margin-right: calc(1vw + 5px);
+}
 .navvojta {
     width: 100px;
-    background-color: #c53d44;
-    border-radius: 100%; 
-    position: relative;
-    right: 15px;
+    margin-top: 7px;
+    background-color: #e0e0e0;
+    border-radius: 100%;
 }
 .socpic-container {
     display: flex;
@@ -93,25 +95,30 @@ h3 {
     font-size: 35px;
     height: 600px;
     overflow: hidden;
+    overflow-wrap: break-word;
 }
 .top > h1 {
-    font-size: 125px;
+    font-size: 75px;
     position: relative;
-    top: 250px;
+    top: 50px;
     z-index: 1;
     padding: 0px;
     margin: 0px;
+    height: 151px;
+    overflow: hidden;
 }
 .hero-holder {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 150px;
 }
 .vojta {
     position:  relative;
-    width: 400px;
-    top: 150px;
+    width: 250px;
     z-index: 25;
+    top: 100px;
+    left: -20px;
 }
 .langarmy {
     display: flex;
@@ -121,7 +128,8 @@ h3 {
 .langarmy > img{
     object-fit: contain ;
     position: relative;
-    top: -25px
+    width: 320px;
+    left: -180px;
 }
 .site > * {
     padding-top: 36px;
@@ -143,13 +151,15 @@ h3 {
     align-items: center;
 }
 .imgs > img {
-    width: 180px;
+    width: 150px;
     border-radius: 15px; margin-bottom: 15px;
     z-index: 15px;
 }
 .imgs {
     display: flex;
     flex-direction: row;
+    position: relative;
+    left: -48px;
 }
 .vojta-sit {
     position: relative;
@@ -184,12 +194,12 @@ h3 {
     align-items: center;
 }
 .css {
-    width: 100px;
+    height: 100px;
     position: relative;
     left: 10px;
 }
 .js {
-    width: 70px;
+    height: 70px;
     position: relative;
     left: 10px;
 }
@@ -228,7 +238,7 @@ h3 {
 }
 .html > img {
     position: relative;
-    width: 100px;
+    height: 100px;
 }
 .skillloaded2 {
     background-color: #F2545B;
@@ -241,7 +251,7 @@ h3 {
     top: 0;
     position: relative;
     transition: 0.2s;
-    width: 100px;
+    height: 100px;
     margin-bottom: 35px;
     margin-top: 35px;
 }
@@ -260,7 +270,7 @@ h3 {
     top: 0;
     position: relative;
     transition: 0.2s;
-    width: 100px;
+    height: 100px;
     margin-bottom: 35px;
     margin-top: 35px;
 }
@@ -329,7 +339,6 @@ h3 {
 }
 .text {
     width: 200px;
-    height: 300px;
     border-radius: 15px;
 }
 #kontakt-formular > button {
@@ -405,6 +414,38 @@ input:hover {
         display: flex;
         flex-direction: row;
     }
+    .top > h1 {
+        font-size: 125px;
+        position: relative;
+        top: 100px;
+        z-index: 1;
+        padding: 0px;
+        margin: 0px;
+    }
+    .hero-holder {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .vojta {
+        position:  relative;
+        width: 400px;
+        top: 150px;
+        z-index: 25;
+        left: 0;
+    }
+    .langarmy {
+        display: flex;
+        flex-direction: row;
+        justify-content: end;
+    }
+    .langarmy > img{
+        object-fit: contain ;
+        position: relative;
+        top: -25px;
+        left: 0px;
+        width: 350px;
+    }
 }
 @media only screen and (min-width: 1200px) {
     .kdojsem > h2 {
@@ -441,6 +482,38 @@ input:hover {
     .portfolio-container {
         display: flex;
         flex-direction: row;
+    }
+    .top > h1 {
+        font-size: 125px;
+        position: relative;
+        top: 250px;
+        z-index: 1;
+        padding: 0px;
+        margin: 0px;
+    }
+    .hero-holder {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .vojta {
+        position:  relative;
+        width: 400px;
+        top: 150px;
+        z-index: 25;
+        left: 0;
+    }
+    .langarmy {
+        display: flex;
+        flex-direction: row;
+        justify-content: end;
+    }
+    .langarmy > img{
+        object-fit: contain ;
+        position: relative;
+        top: -25px;
+        left: 0px;
+        width: 532px;
     }
 }
 @media only screen and (min-width: 1600px) {
